Fixed overflow bug

--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
 body {
     margin: 0;
     background-color: #181717;
+    overflow: hidden;
 }
 
 ::-webkit-scrollbar {
